--- a/src/pages/ejercicioaleatorio/ejercicioaleatorio.html
+++ b/src/pages/ejercicioaleatorio/ejercicioaleatorio.html
@@ -14,6 +14,12 @@
 
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item *ngFor="let ejercicio of listaEjercicios | async">
+      <h1>
+        <b>{{Ejercicio.Tipo}}</b>
+      </h1>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
