--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,8 +8,12 @@
 
 <ion-content padding>
   
-  <button ion-button block [navPush]="lista">
+  <button ion-button block [navPush]="prueba">
     Comenzar
   </button> 
+
+  <button ion-button block [navPush]="lista">
+      Comenzar2
+    </button> 
 
 </ion-content>
