--- a/src/pages/lista/lista.html
+++ b/src/pages/lista/lista.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>lista Ejercicios</ion-title>
+    <ion-title>Lista de Ejercicios</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,31 +16,19 @@
 <ion-content padding>
 
     <button ion-button block [navPush]="Dia1">
-        Ejercicios del lunes
+        EJERCICIOS DE PECHO
       </button> 
 
       <button ion-button block [navPush]="Dia2">
-          Ejercicios del Martes
+          EJERCICIOS DE BICEPS
         </button> 
 
         <button ion-button block [navPush]="Dia3">
-            Ejercicios del Miercoles
+            EJERCICIOS DE PIERNAS
           </button> 
 
           <button ion-button block [navPush]="Dia4">
-              Ejercicios del Jueves
+              EJERCICIOS DE ABDOMINALES
             </button> 
-
-            <button ion-button block [navPush]="Dia5">
-                Ejercicios del Viernes
-              </button> 
-
-              <button ion-button block [navPush]="Dia6">
-                  Ejercicios del Sabado
-                </button> 
-
-                <button ion-button block [navPush]="Dia7">
-                    Ejercicios del Domingo
-                  </button> 
 
 </ion-content>
