--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,14 +6,10 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding block [navPush]="lista">
   
-  <button ion-button block [navPush]="prueba">
-    Comenzar
-  </button> 
+  <img src="../../assets/imgs/logo.png"><br>
+<p id="toca" style="">Toca para comenzar</p>
 
-  <button ion-button block [navPush]="lista">
-      Comenzar2
-    </button> 
 
 </ion-content>
