--- a/src/pages/lista/lista.html
+++ b/src/pages/lista/lista.html
@@ -15,19 +15,19 @@
 
 <ion-content padding>
 
-    <button ion-button block [navPush]="Dia1">
+    <button ion-button block [navPush]="Ejerciciospecho">
         EJERCICIOS DE PECHO
       </button> 
 
-      <button ion-button block [navPush]="Dia2">
+      <button ion-button block [navPush]="Ejerciciosbiceps">
           EJERCICIOS DE BICEPS
         </button> 
 
-        <button ion-button block [navPush]="Dia3">
+        <button ion-button block [navPush]="Ejerciciospiernas">
             EJERCICIOS DE PIERNAS
           </button> 
 
-          <button ion-button block [navPush]="Dia4">
+          <button ion-button block [navPush]="Ejerciciosabdominales">
               EJERCICIOS DE ABDOMINALES
             </button> 
 
