--- a/src/pages/ejerciciopiernas/ejerciciopiernas.html
+++ b/src/pages/ejerciciopiernas/ejerciciopiernas.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Ejercicios de pecho</ion-title>
+    <ion-title>Ejercicios de piernas</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,7 +16,7 @@
 <ion-content padding>
   <ion-list>
     <div *ngFor="let ejercicio of listaEjercicios | async" >
-      <ion-item *ngIf="ejercicio.Categoria == 'pecho' " (click)="temporizador(ejercicio.Descanso)">
+      <ion-item *ngIf="ejercicio.Categoria == 'piernas' ">
         <h1>
           <b>{{ejercicio.Tipo}}</b>
         </h1>
