--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,7 @@
 <ion-content padding block [navPush]="lista">
   
   <img src="../../assets/imgs/logo.png"><br>
-<p id="toca" style="">Toca para comenzar</p>
+<p id="toca">Toca para comenzar</p>
 
 
 </ion-content>
