--- a/src/pages/temporizador/temporizador.html
+++ b/src/pages/temporizador/temporizador.html
@@ -6,15 +6,13 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>temporizador</ion-title>
-  </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
   <b>Tiempo de descanso</b>
+  <img id="cargando" src="../../assets/imgs/Cargando.gif">
   <p>{{tiempo}}</p>
   
 </ion-content>
