--- a/src/pages/ejercicioabdominales/ejercicioabdominales.html
+++ b/src/pages/ejercicioabdominales/ejercicioabdominales.html
@@ -14,14 +14,16 @@
 
 
 <ion-content padding>
-  <ion-list>
-    <div *ngFor="let ejercicio of listaEjercicios | async" >
-      <ion-item *ngIf="ejercicio.Categoria == 'abdominales' ">
-        <h1>
-          <b>{{ejercicio.Tipo}}</b>
-        </h1>
-        <p>Repeticiones: {{ejercicio.Repeticiones}}</p>
-      </ion-item>
-    </div>
-  </ion-list>
+  <img src="../../assets/imgs/abdominales.png">
+    <ion-list>
+      <div *ngFor="let ejercicio of listaEjercicios | async">
+          <ion-item *ngIf="ejercicio.Categoria == 'abdominales' " (click)="temporizador(ejercicio.Descanso)"
+            item-content>
+            <h1>
+              <b>{{ejercicio.Tipo}}</b>
+            </h1>
+            <p style="color: orange">Repeticiones: {{ejercicio.Repeticiones}}</p>
+          </ion-item>
+      </div>
+    </ion-list>
 </ion-content>
