--- a/src/pages/ejerciciopiernas/ejerciciopiernas.html
+++ b/src/pages/ejerciciopiernas/ejerciciopiernas.html
@@ -14,13 +14,14 @@
 
 
 <ion-content padding>
+    <img src="../../assets/imgs/piernas.png">
   <ion-list>
     <div *ngFor="let ejercicio of listaEjercicios | async" >
-      <ion-item *ngIf="ejercicio.Categoria == 'piernas' ">
+      <ion-item *ngIf="ejercicio.Categoria == 'piernas' "  (click)="temporizador(ejercicio.Descanso)">
         <h1>
           <b>{{ejercicio.Tipo}}</b>
         </h1>
-        <p>Repeticiones: {{ejercicio.Repeticiones}}</p>
+        <p style="color: orange">Repeticiones: {{ejercicio.Repeticiones}}</p>
       </ion-item>
     </div>
   </ion-list>
