--- a/src/pages/ejercicioaleatorio/ejercicioaleatorio.html
+++ b/src/pages/ejercicioaleatorio/ejercicioaleatorio.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="orange">
     <ion-title>Ejercicios de pecho</ion-title>
   </ion-navbar>
 
