--- a/src/pages/ejerciciopiernas/ejerciciopiernas.html
+++ b/src/pages/ejerciciopiernas/ejerciciopiernas.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="orange">
     <ion-title>Ejercicios de piernas</ion-title>
   </ion-navbar>
 
