--- a/src/pages/lista/lista.html
+++ b/src/pages/lista/lista.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="orange">
     <ion-title>Lista de Ejercicios</ion-title>
   </ion-navbar>
 
